[gd_scene load_steps=6 format=3 uid="uid://muo2slv6dqvy"]

[ext_resource type="Script" path="res://enemy/king_boss/king_thrown_scepter.gd" id="1_86ulj"]
[ext_resource type="Texture2D" uid="uid://bpivhp0yswnq3" path="res://enemy/king_boss/temp_art/nail.png" id="1_ymojj"]
[ext_resource type="Script" path="res://enemy/king_boss/king_scepter_rotate.gd" id="2_ixxmt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_375pt"]
size = Vector2(26, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_100ge"]
size = Vector2(26, 30)

[node name="KingThrownScepter" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_86ulj")
throw_distance = 400.0
acceleration = -800.0
max_bounce_distance = 800.0
knockback_force = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_375pt")

[node name="LifespanTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 130

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_100ge")
debug_color = Color(0.980349, 0, 0.380419, 0.42)

[node name="SpriteHolder" type="Node2D" parent="." node_paths=PackedStringArray("scepter")]
script = ExtResource("2_ixxmt")
max_angular_speed = 15.0
min_angular_speed = 5.0
scepter = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="SpriteHolder"]
position = Vector2(0, -25)
rotation = 3.14159
scale = Vector2(0.625383, 0.625383)
texture = ExtResource("1_ymojj")
region_enabled = true
region_rect = Rect2(0, 32.8533, 36, 129.147)

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
